--- a/ForumHub/ForumHub/src/main/resources/application.properties
+++ b/ForumHub/ForumHub/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+server.tomcat.use-native=false
+
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
 
 api.security.token.secret=123456789
 
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
-logging.level.root=DEBUG
+server.port=8081
